# Flask

./: CMakeLists.txt  Makefile  main.c
python/: image_extraction.py  result.txt  test.txt
python/test_files/: test1.txt  test2.txt
src/: Game.c  Game.h  Node.c  Node.h  Node_pile.c
src/concurrent/: Game_concurrent.c  Node_concurrent.c
src/memory/: Game_memory.c  Node_memory.c
src/naive/: Game_naive.c  Node_naive.c
src/naive/pile_naive/: Game_pile_naive.c  Node_pile_naive.c
src/pile/: Game_pile.c  Node_pile.c
tst/: Node_test.c
